/*
 * MIT License
 *
 * Copyright (c) 2021 P2O-Lab <p2o-lab@mailbox.tu-dresden.de>,
 * Chair for Process Control Systems, Technische Universität Dresden
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
 
@startuml
'https://plantuml.com/class-diagram

interface OpModeRuntime{
	+ StateChannel: DataItem<boolean>
	+ StateOffAut: DataItem<boolean>
	+ StateOpAut: DataItem<boolean>
	+ StateAutAut: DataItem<boolean>
	+ StateOffOp: DataItem<boolean>
	+ StateOpOp: DataItem<boolean>
	+ StateAutOp: DataItem<boolean>
	+ StateOpAct: DataItem<boolean>
	+ StateAutAct: DataItem<boolean>
	+ StateOffAct: DataItem<boolean>
}


class OpMode{
    + readonly dataItems: OpModeRuntime
    + OpMode(requiredDataItems: Required<OpModeRuntime>)
    + getOperationMode(): OperationMode
    + isOpMode(expectedOpMode: OperationMode): boolean
    + async waitForOpModeToPassSpecificTest(expectedOpMode: OperationMode): Promise<void>
    + async setToAutomaticOperationMode(): Promise<void>
    + async setToOperatorOperationMode(): Promise<void>
    + async setToOfflineOperationMode(): Promise<void>
    + async writeOpMode(opMode: OperationMode): Promise<void>
    + isOfflineState(): boolean
    + isOperatorState(): boolean
    + isAutomaticState(): boolean
}

OpModeRuntime <-- OpMode
OpModeSpec --> OpMode : <<uses>>
OpModeSpec --> OpModeMockup : <<uses>>

@enduml
